feat(startup): open files in the running instance instead of a second editor (#861)
On Linux and Windows a file manager delivers the path as argv, which by
definition means a new process — so clicking a file while Editora was open paid
a full cold start AND left a second editor resident (measured: two JVMs at
670 MB and 1707 MB, for what looks like one application). macOS never had this,
because Finder delivers an openFiles Apple Event that reaches the running app.
This is the cross-platform equivalent, and it routes through the same
WindowManager.openExternalFiles that event does, so the two cannot drift.

A second launch now delivers over a loopback socket and exits: ~735 ms (JVM
boot, which a new process cannot avoid) against ~1.5 s plus a permanently
resident second editor. Verified end to end on a packaged build — after the
second click there is one JVM and one window, titled with the second launch's
file.

Three things this got wrong first and must stay right:

- The claim is asynchronous. Binding the socket, seeding the token and
  publishing the endpoint in main() cost ~38 ms of time-to-first-paint for ~4 ms
  of actual work — almost entirely class loading dragged onto the critical path.
  Isolated with a temporary in-build kill switch, because a separate build's AOT
  training confounds the comparison. Only the forward check (one file read) is
  synchronous now; a launch arriving before the claim lands just starts its own
  editor, exactly as before.

- No Jackson. The endpoint is a Properties file: parsing it with the app's
  ObjectMapper would make every launch pay Jackson's ~60 ms warm-up, more than
  the whole feature saves.

- The publish is a temp-file Files.move WITHOUT REPLACE_EXISTING, which settles
  the two-launches-at-once race and means a reader never sees a half-written
  file. That makes reaping an unparseable leftover mandatory — otherwise it
  blocks every future claim and disables handoff permanently. Caught by the
  test, not by review.

